--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -2,31 +2,25 @@
 set-option -g status "on"
 
 # default statusbar colors
-set-option -g status-bg colour237 #bg1
-set-option -g status-fg colour223 #fg1
+set-option -g status-style bg=colour237,fg=colour223 #bg1 #fg1
 
 # default window title colors
-set-window-option -g window-status-bg colour214 #yellow
-set-window-option -g window-status-fg colour237 #bg1
+set-window-option -g window-status-style bg=colour214,fg=colour237 #yellow #bg1
 
-set-window-option -g window-status-activity-bg colour237 #bg1
-set-window-option -g window-status-activity-fg colour248 #fg3
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 #bg1 #fg3
 
 # active window title colors
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg colour237 #bg1
+set-window-option -g window-status-current-style bg=default,fg=colour237 #default #bg1
 
 # pane border
-set-option -g pane-active-border-fg colour250 #fg2
-set-option -g pane-border-fg colour237 #bg1
+set-option -g pane-active-border-style fg=colour250 #fg2
+set-option -g pane-border-style fg=colour237 #bg1
 
 # message infos
-set-option -g message-bg colour239 #bg2
-set-option -g message-fg colour223 #fg1
+set-option -g message-style bg=colour239,fg=colour223 #bg2 #fg1
 
 # writting commands inactive
-set-option -g message-command-bg colour239 #fg3
-set-option -g message-command-fg colour223 #bg1
+set-option -g message-command-style bg=colour239,fg=colour223 #fg3 #bg1
 
 # pane number display
 set-option -g display-panes-active-colour colour250 #fg2
