--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -34,14 +34,14 @@ set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
 
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-attr "none"
+set-option -g status-style none
 set-option -g status-justify "left"
-set-option -g status-left-attr "none"
+set-option -g status-left-style none
 set-option -g status-left-length "80"
-set-option -g status-right-attr "none"
+set-option -g status-right-style none
 set-option -g status-right-length "80"
-set-window-option -g window-status-activity-attr "none"
-set-window-option -g window-status-attr "none"
+set-window-option -g window-status-activity-style none
+set-window-option -g window-status-style none
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
