hacky fix of the bar background

--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -34,7 +34,7 @@ set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
 
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-style none
+set-option -g status-style bg=colour237
 set-option -g status-justify "left"
 set-option -g status-left-style none
 set-option -g status-left-length "80"
@@ -47,6 +47,7 @@ set-window-option -g window-status-separator ""
 set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
 set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
 
-set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
+#here is a hacky workaround. TODO: see why the bg=colour214 is needed
+set-window-option -g window-status-current-format "#[bg=colour214]#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
 set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
 
