fixed installation script

--- a/tmux-gruvbox-light.conf
+++ b/tmux-gruvbox-light.conf
@@ -41,9 +41,9 @@ set-window-option -g window-status-bell-style bg=colour124,fg=colour229 # bg=red
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-justify "left"
-set-option -g status-left-style attr="none"
+set-option -g status-left-style none
 set-option -g status-left-length "80"
-set-option -g status-right-style attr="none"
+set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
