--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -35,7 +35,7 @@ set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-justify "left"
-set-option -g status-left-style attr="none"
+set-option -g status-left-style none
 set-option -g status-left-length "80"
 set-option -g status-right-style none
 set-option -g status-right-length "80"
