Use window status style in window status format
Avoid overriding the colours defined in the style
in the format. This fixes bug #12.

--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -5,13 +5,13 @@ set-option -g status "on"
 set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
 # default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+set-window-option -g window-status-style bg=colour239,fg=colour223 # bg=bg2, fg=bg1
 
 # default window with an activity alert
 set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
 
 # active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+set-window-option -g window-status-current-style bg=colour214,fg=colour239 # bg=yellow, fg=bg2
 
 # pane border
 set-option -g pane-active-border-style fg=colour250 #fg2
@@ -44,7 +44,7 @@ set-window-option -g window-status-separator ""
 set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
 set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
 
-set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
-set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
+set-window-option -g window-status-current-format "#[fg=colour237,nobold,noitalics,nounderscore]#[fg=default] #I #[bold] #W#{?window_zoomed_flag,*Z,} #[fg=colour237,reverse,nobold,noitalics,nounderscore]"
+set-window-option -g window-status-format "#[fg=colour237,noitalics]#[fg=default] #I  #W #[fg=colour237,reverse,noitalics]"
 
 # vim: set ft=tmux tw=0 nowrap:
