--- a/.github/workflows/dev-push-check.yml
+++ b/.github/workflows/dev-push-check.yml
@@ -30,5 +30,5 @@ jobs:
         run: sudo apt install -y tmux git
       - name: checkout repo
         uses: actions/checkout@main
-      - name: dummy test setup
+      - name: run all linux tests
         run: ./tests/run_all_linux_tests.sh
