refactor: rename tests_linux job

--- a/.github/workflows/dev-push-check.yml
+++ b/.github/workflows/dev-push-check.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@main
       - name: Lint files against shfmt
         run: make lint_shfmt
-  test_setup_linux:
+  tests_linux:
     runs-on: ubuntu-latest
     needs:
       - lint_shfmt
